# NLiteLib

./: CMakeLists.txt  README.md  build_debug.cmd  build_debug.sh  test_all.cmd
src/math/: vector4f.hpp
src/platform/: platform_defines.h  pre_defines.h
src/simd/: simd_vec.h  simd_vec.hpp
tests/: CMakeLists.txt
tests/platform/: CMakeLists.txt  test_platform_defines.cpp
tests/simd/: CMakeLists.txt  test_simd.cpp
